--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
 body {
   margin: 0;
+  background: rgba(196, 193, 193, 0.82);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
