--- a/src/Components/Login_Signup/Login_Signup.css
+++ b/src/Components/Login_Signup/Login_Signup.css
@@ -4,7 +4,7 @@
     background-size: cover;
     border-radius: 10px;
     box-shadow: 10px 10px gray;
-    height: 450px;
+    height: 550px;
     width: 500px;
     color: rgb(0, 0, 0);
     display: flex;
@@ -40,11 +40,11 @@ align-items: center;
 margin-top: 25px;
 /* background: blue; */
 }
-.input img{
+.inputs img{
     margin: 0px 25px;
 }
 .input{
-    background-color:rgba(185, 183, 183, 0.541);
+    background-color:rgba(185, 183, 183, 0.804);
     width: 450px;
     height:50px;
     margin: auto;
@@ -61,20 +61,65 @@ margin-top: 25px;
     border: none;
 
 }
-.Submit{
-    width: 100px;
-    height: 40px;
-    border-radius: 40px;
-    background-color:rgba(158, 158, 158, 0.409);
+.footer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 30px;
 }
-.Submit button{
-    width: 100px;
+.Submit{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(253, 252, 252);
+    /* width: 100px;
+    height: 40px; */
     height: 40px;
+    width: 100px;
     border-radius: 40px;
-    color: rgb(255, 255, 255);
-    font-size: 15px;
-    pointer-events: painted;
-    background: transparent;
-    border: none;
+    align-items: center;
+    font-size: 25px;
+    font-weight: 555;
+    cursor: pointer;
+    background-color:rgba(158, 158, 158, 0.973);
+}
+.signIn{
+    display: flex;
+    flex-direction: column;
+    height: 40px;
+    width: 100px;
+    border-radius: 40px;
+    align-items: center;
+    font-size: 25px;
+    font-weight: 555;
+    background-color:rgba(158, 158, 158, 0.973);
+    cursor: pointer;
+}
+.Submit span:hover{
+    color: whitesmoke;
+
+}
+.signIn span:hover{
+    color: whitesmoke;
+
 }
 
+.fp{
+    /* display: flex;
+    flex-direction: column; */
+    font-size: 20px;
+    color: white;
+    cursor: pointer;
+}
+.fp :hover{
+    color: blue;
+}
+.fp span{
+    cursor: pointer;
+}
+.fp span :hover{
+   color: black;
+}
+.gray{
+    background-color: white;
+    color: rgb(248, 245, 245);
+}
