--- a/src/Components/Hostel_Booking/Hostel_Booking.css
+++ b/src/Components/Hostel_Booking/Hostel_Booking.css
@@ -1,4 +1,4 @@
-.container {
+.container-hostel {
     display: flex;
     justify-content: center;
     margin-top: 150px;
@@ -28,7 +28,7 @@
     width: 300px;
     height: auto;
 }
-.overlay{
+.overlay-hostel{
   background-color: rgba(247, 247, 247, 0);
   width: 300px;
   height: 200px;
@@ -36,7 +36,7 @@
   display: flex;
   justify-content: center;
 }
-.overlay span{
+.overlay-hostel span{
   font-size: 20px;
   font-family:cursive;
   color: rgb(0, 1, 0);
@@ -44,12 +44,12 @@
   margin-top: 70px;
   opacity: 0%;
 }
-.hostel:hover .overlay{
+.hostel:hover .overlay-hostel{
   opacity: 100%;
   background-color: rgba(255, 255, 255, 0.727);
   
 }
-.hostel:hover .overlay span{
+.hostel:hover .overlay-hostel span{
   opacity: 100%;
   cursor: pointer;
   
