--- a/src/Components/Hostel_Booking/Hostel_Booking_Floors.css
+++ b/src/Components/Hostel_Booking/Hostel_Booking_Floors.css
@@ -25,12 +25,13 @@
     display: flex;
     flex-direction: column;
     top: 0;
-    margin-top: 230px;
+    margin-top: 250px;
     align-items: center;
     position: absolute;
     opacity: 100%;
     width:500px;
-    height: 350px;
+    height: 330px;
+    border-radius: 20px;
 }
 .overlay span{
     color: black;
