--- a/src/Components/Hostel_Booking/Hostel_Booking_rooms.css
+++ b/src/Components/Hostel_Booking/Hostel_Booking_rooms.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 120px 150px;
+    /* margin: 120px 150px; */
     width: auto;
     height: 1100px;
     
@@ -11,16 +11,13 @@
     font-size: 50px;
     font-weight: 700;
     color: white;
-    background-color: rgba(0, 0, 0, 0.355);
-    backdrop-filter: blur(10px);
+   
     border-radius: 20px;
     
 }
 .available{
     color: white;
-    font-size:30px;
-    background-color: rgba(0, 0, 0, 0.355);
-    backdrop-filter: blur(10px);
+    font-size:30px; 
     border-radius: 20px;
 }
 
