--- a/src/Components/Login_Signup/Login_Signup.css
+++ b/src/Components/Login_Signup/Login_Signup.css
@@ -1,12 +1,14 @@
-.container{
-    background-image: url("D:\ABD REACT\login_signup\src\Components\Assets\bg_hostel.jpg");
+.container-Login{
+    background-image: url("");
+    background-color:rgba(95, 147, 137, 0.508);
+    backdrop-filter: blur(10px);
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 10px;
-    box-shadow: 10px 10px gray;
-    height: 550px;
+    /* box-shadow: 10px 10px rgba(76, 209, 207, 0.392);
+    height: 550px; */
     width: 500px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     display: flex;
     flex-direction:column;
     margin:auto;
@@ -29,7 +31,7 @@
 .underline{
     width: 61px;
     height: 6px;
-    background-color: rgb(147, 146, 147);
+    background-color:rgba(103, 168, 161, 0.973);
     border-radius: 9px;
 }
 .inputs{
@@ -44,12 +46,18 @@ margin-top: 25px;
     margin: 0px 25px;
 }
 .input{
-    background-color:rgba(185, 183, 183, 0.804);
+    background-color:rgba(77, 115, 127, 0.593);
+    backdrop-filter: blur(10px);
+    color: white;
     width: 450px;
     height:50px;
     margin: auto;
     align-items: center;
     border-radius: 25px;
+}
+.inputs ::placeholder{
+    color: aliceblue;
+
 }
 .input input{
     margin: auto;
@@ -59,7 +67,6 @@ margin-top: 25px;
     font-size: 20px;
     outline: none;
     border: none;
-
 }
 .footer{
     display: flex;
@@ -70,7 +77,6 @@ margin-top: 25px;
 .Submit{
     display: flex;
     flex-direction: column;
-    background-color: rgb(253, 252, 252);
     /* width: 100px;
     height: 40px; */
     height: 40px;
@@ -80,7 +86,7 @@ margin-top: 25px;
     font-size: 25px;
     font-weight: 555;
     cursor: pointer;
-    background-color:rgba(158, 158, 158, 0.973);
+    background-color:rgba(109, 159, 153, 0.973);
 }
 .signIn{
     display: flex;
@@ -91,7 +97,7 @@ margin-top: 25px;
     align-items: center;
     font-size: 25px;
     font-weight: 555;
-    background-color:rgba(158, 158, 158, 0.973);
+    background-color:rgba(109, 159, 153, 0.973);
     cursor: pointer;
 }
 .Submit span:hover{
