--- a/src/Components/Login_Signup/Login_Signup.css
+++ b/src/Components/Login_Signup/Login_Signup.css
@@ -1,4 +1,4 @@
-.container-Login{
+.container-signup{
     background-image: url("");
     background-color:rgba(95, 147, 137, 0.508);
     backdrop-filter: blur(10px);
