--- a/src/Components/Login_Signup/Login_Signup.css
+++ b/src/Components/Login_Signup/Login_Signup.css
@@ -1,12 +1,9 @@
 .container-signup{
-    background-image: url("");
-    background-color:rgba(95, 147, 137, 0.508);
-    backdrop-filter: blur(10px);
+    background-color:rgba(255, 255, 255, 0.508);
+    backdrop-filter: blur(5px);
     background-repeat: no-repeat;
     background-size: cover;
     border-radius: 10px;
-    /* box-shadow: 10px 10px rgba(76, 209, 207, 0.392);
-    height: 550px; */
     width: 500px;
     color: rgb(255, 255, 255);
     display: flex;
@@ -25,13 +22,14 @@
 }
 .Signup{
     font-size: 25px;
+    color:rgb(140, 73, 73);
     /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; */
     font-weight: 700;
 }
-.underline{
+.underline-login{
     width: 61px;
     height: 6px;
-    background-color:rgba(103, 168, 161, 0.973);
+    background-color:rgb(140, 73, 73);
     border-radius: 9px;
 }
 .inputs{
@@ -46,9 +44,10 @@ margin-top: 25px;
     margin: 0px 25px;
 }
 .input{
-    background-color:rgba(77, 115, 127, 0.593);
+    /* background-color:rgba(75,112,60,25); */
+    background: rgba(136, 43, 43, 0.623);
     backdrop-filter: blur(10px);
-    color: white;
+    color: rgb(0, 0, 0);
     width: 450px;
     height:50px;
     margin: auto;
@@ -86,7 +85,7 @@ margin-top: 25px;
     font-size: 25px;
     font-weight: 555;
     cursor: pointer;
-    background-color:rgba(109, 159, 153, 0.973);
+    background-color:rgba(140, 73, 73, 0.834);
 }
 .signIn{
     display: flex;
@@ -97,8 +96,11 @@ margin-top: 25px;
     align-items: center;
     font-size: 25px;
     font-weight: 555;
-    background-color:rgba(109, 159, 153, 0.973);
+    background-color:rgba(75,112,60,25);
     cursor: pointer;
+}
+.Submit:hover{
+    background-color:rgb(140, 73, 73);
 }
 .Submit span:hover{
     color: whitesmoke;
@@ -109,22 +111,18 @@ margin-top: 25px;
 
 }
 
-.fp{
+.fp-footer{
     /* display: flex;
     flex-direction: column; */
     font-size: 20px;
-    color: white;
+    color: rgb(140, 73, 73);
+}
+.fp-footer :hover{
+    color: rgb(128, 181, 109);
     cursor: pointer;
 }
-.fp :hover{
-    color: blue;
-}
-.fp span{
-    cursor: pointer;
-}
-.fp span :hover{
-   color: black;
-}
+
+
 .gray{
     background-color: white;
     color: rgb(248, 245, 245);
