--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 body {
   margin: 0;
-  background: rgb(255, 250, 250);
+  background: rgb(250, 253, 255);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-background-image: url("D:\ABD REACT\login_signup\src\Components\Assets\bg_clg.jpg");
+background-image: url("D:\ABD REACT\login_signup\src\Components\Assets\bgnew.jpg");
+background-size: cover;
 background-position: center;
 background-clip: border-box;
 }
