--- a/src/Components/Hostel_Booking/Hostel_Booking_Floors.css
+++ b/src/Components/Hostel_Booking/Hostel_Booking_Floors.css
@@ -1,31 +1,36 @@
 /* *{
     box-sizing: border-box;
 } */
+.container-floors{
+    display: flex;
+    flex-direction: column;
+    margin-top: 250px;
+    justify-content: center;
+}
 .floors{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    float: center;
+    flex-wrap: wrap;
     padding: 5px;
-    margin-top: 250px;
-    gap: 10px;
+    justify-content: center;
+    gap: 20px;
 }
 .floor{
     border-radius: 10px;
+    cursor: pointer;
 }
 .floor img{
    
     width: 500px;
-    box-shadow: 10px 10px grey;
     border-radius: 10px;
-    
-    
 }
-.overlay{
+.overlay-floors{
     display: flex;
     flex-direction: column;
     top: 0;
-    margin-top: 250px;
+bottom: 0;
+
+    margin-top: 2px;
     align-items: center;
     position: absolute;
     opacity: 100%;
@@ -33,7 +38,7 @@
     height: 330px;
     border-radius: 20px;
 }
-.overlay span{
+.overlay-floors span{
     color: black;
     font-size: 30px;
     font-weight: 700;
@@ -41,11 +46,11 @@
     opacity: 0%;
 
 }
-.floor:hover .overlay{
+.floor:hover .overlay-floors{
     opacity: 100%;
     background-color: rgba(249, 249, 249, 0.553);
 }
-.floor:hover .overlay span{
+.floor:hover .overlay-floors span{
     cursor: pointer;
     opacity: 100%;
 }
