--- a/src/Components/Hostel_Booking/Hostel_Booking_rooms.css
+++ b/src/Components/Hostel_Booking/Hostel_Booking_rooms.css
@@ -5,35 +5,34 @@
     /* margin: 120px 150px; */
     width: auto;
     height: 1100px;
-    
 }
 .container h1{
     margin-top: 0px;
     font-size: 80px;
     font-weight: 700;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     border-radius: 20px;
-    background-color: rgba(2, 255, 141, 0.33);
     backdrop-filter:blur(10px);
     
 }
-.container span{
+/* .container span{
     background-color:rgba(74, 206, 254, 0.378);
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
     backdrop-filter: blur(10px);
     font-size: 40px;
     font-weight: 500;
-}
+} */
 
 .room_container{
     display: flex;
     /* background-color: rgba(185, 240, 244, 0.349); */
+    margin-bottom: 10px;
     backdrop-filter: blur(10px);
     border-radius: 20px;
     width: 700px;
-    height: 90%;
+    height: 100%;
    
 }
 .room img{
@@ -74,16 +73,16 @@
     
 } */
 .left{
-    width: 50%;
-    height: 100%;
-    background-color: rgba(2, 255, 141, 0.33);
+    margin-top: 50px;
+    width: 100%;
+    height:90%;
+    background-color:rgba(140, 73, 73, 0.515);
     backdrop-filter: blur(20px);
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-    
+    border-radius: 10px;
+    color: aliceblue;
 }
 .right{
-    background-color:rgba(74, 206, 254, 0.378);
+    background-color:rgba(140, 73, 73, 0.515);
     width:50%;
     height: 100%;
     /* border-radius: 10px; */
@@ -100,9 +99,8 @@
     background-color:transparent;
     display: flex;
     flex-wrap: wrap;
-    margin-top: 5px;
     gap: 30px;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 .right_wing{
     background-color:transparent;
@@ -124,4 +122,19 @@
 .user_data{
     background-color: black;
   
+}
+.submit-btn{
+    display: flex;
+    background-color: rgba(165, 42, 42, 0.41);
+    border-radius: 10px;
+    width: 80px;
+    justify-content: center;
+    height: 40px;
+    font-weight: 500;
+    font-size: 20px;
+    margin-bottom: 100px;
+}
+.submit-btn:hover{
+    background-color: rgba(165, 42, 42, 0.648);
+    cursor: pointer;
 }
