--- a/src/Components/Login_Signup/Login_Signup.css
+++ b/src/Components/Login_Signup/Login_Signup.css
@@ -5,6 +5,7 @@
     background-size: cover;
     border-radius: 10px;
     width: 500px;
+    height: 410px;
     color: rgb(255, 255, 255);
     display: flex;
     flex-direction:column;
