--- a/login/src/Components/Login_Signup/Login_Signup.css
+++ b/login/src/Components/Login_Signup/Login_Signup.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 .container-signup{
     background-color:rgba(255, 255, 255, 0.508);
     backdrop-filter: blur(5px);
